--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,31 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url "https://jitpack.io" }
     }
+}
+
+ext{
+    compileSdkVersion = 29
+    buildToolsVersion = '29.0.2'
+    minSdkVersion = 21
+    targetSdkVersion = 29
+    supportLibraryVersion = '1.1.0'
+    constraintLayoutVersion = '1.1.3'
+    daggerVersion = '2.17'
+    javaxAnotationVersion = '3.1.1'
+    lifecycleExtVersion = '2.2.0-alpha05'
+    cardViewVersion = '1.0.0'
+    recyclerViewVersion = '1.1.0-beta04'
+    shimmerRecyclerViewVersion = 'v1.3'
+    retrofitVersion = '2.5.0'
+    moshiVersion = '1.8.0'
+    rxJavaVersion = '2.1.15'
+    rxAndroidVersion = '2.0.2'
+    glideVersion = '4.9.0'
+    materialDesignVersion = '1.1.0-alpha10'
+
+
 }
 
 task clean(type: Delete) {
