--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ ext{
     rxAndroidVersion = '2.0.2'
     glideVersion = '4.9.0'
     materialDesignVersion = '1.1.0-alpha10'
+    viewModelVersion = '2.2.0-alpha05'
+    legacySupportVersion = '1.0.0'
 
 
 }
